# kick_spammers

./: main.py  pyproject.toml
scammers/: pyvenv.cfg
scammers/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
